--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,9 @@ SAVE_DIR=./saves
 SILICONFLOW_API_KEY=
 # Alternatives:
 DASHSCOPE_API_KEY=
+DASHSCOPE_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+DASHSCOPE_IMAGE_EDIT_MODEL=qwen-image-edit-plus
+DASHSCOPE_IMAGE_EDIT_ENDPOINT=https://dashscope.aliyuncs.com/api/v1/services/aigc/multimodal-generation/generation
 OPENAI_API_KEY=
 DEEPSEEK_API_KEY=
 ZHIPUAI_API_KEY=
